Attempt fix at left shift

--- a/assets/css/styleeae.css
+++ b/assets/css/styleeae.css
@@ -102,6 +102,7 @@ select {
 	align-items: center;
 	margin-top: 1rem;
 	margin-bottom: 1rem;
+	clear:both;
 }
 
 #exp{
@@ -210,6 +211,7 @@ select {
 	writing-mode: vertical-rl;
 	text-orientation: sideways-left;
 	margin-left: 3rem;
+	clear:both;
 }
 
 /* ------------------------------------ Virginia Tech ------------------------------------*/
